--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "webpack build --progress"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
@@ -16,6 +18,7 @@
     "@types/node": "^20.11.5",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.34",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.9.1",
@@ -25,6 +28,7 @@
     "sass": "^1.55.0",
     "sass-loader": "^14.0.0",
     "style-loader": "^3.3.1",
+    "styled-components": "^6.1.12",
     "ts-loader": "^9.4.1",
     "typescript": "^5.3.3",
     "webpack": "^5.74.0",
